--- a/Eternal Blood Bank System/App.config
+++ b/Eternal Blood Bank System/App.config
@@ -3,9 +3,10 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="Eternal_Blood_Bank_System.My.MySettings.EternalConnectionString"
-            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Assets\Eternal.mdf;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
+       
+        <add name="Eternal_Blood_Bank_System.My.MySettings.EternalConnectionString1"
+            connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\Eternal.mdb"
+            providerName="System.Data.OleDb" />
     </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
