--- a/Eternal Blood Bank System/Eternal Blood Bank System.vbproj
+++ b/Eternal Blood Bank System/Eternal Blood Bank System.vbproj
@@ -69,7 +69,9 @@
     <Reference Include="Bunifu_UI_v1.52">
       <HintPath>Assets\Bunifu_UI_v1.52.dll</HintPath>
     </Reference>
-    <Reference Include="System" />
+    <Reference Include="System">
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7.2\System.dll</HintPath>
+    </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
@@ -148,6 +150,24 @@
     <Compile Include="LogInScreen.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="ManageStaff.Designer.vb">
+      <DependentUpon>ManageStaff.vb</DependentUpon>
+    </Compile>
+    <Compile Include="ManageStaff.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ManageUser.Designer.vb">
+      <DependentUpon>ManageUser.vb</DependentUpon>
+    </Compile>
+    <Compile Include="ManageUser.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reports.Designer.vb">
+      <DependentUpon>Reports.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Reports.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="RequestForBloodScreen.Designer.vb">
       <DependentUpon>RequestForBloodScreen.vb</DependentUpon>
     </Compile>
@@ -220,6 +240,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="LogInScreen.resx">
       <DependentUpon>LogInScreen.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ManageStaff.resx">
+      <DependentUpon>ManageStaff.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ManageUser.resx">
+      <DependentUpon>ManageUser.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reports.resx">
+      <DependentUpon>Reports.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="RequestForBloodScreen.resx">
       <DependentUpon>RequestForBloodScreen.vb</DependentUpon>
